--- a/app/src/main/res/drawable/ic_app_icon.xml
+++ b/app/src/main/res/drawable/ic_app_icon.xml
@@ -4,25 +4,26 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     
+    <!-- Background circle -->
+    <path
+        android:fillColor="#5A7A9A"
+        android:pathData="M54,54m-52,0a52,52 0,1 1,104 0a52,52 0,1 1,-104 0"/>
+    
+    <!-- Video camera icon -->
     <group android:translateX="58.5" android:translateY="54">
-        <!-- Video camera body -->
+        <!-- Camera body -->
         <path
             android:fillColor="#FFFFFF"
-            android:pathData="M-20,-12L12,-12A6,6 0,0 1,18 -6L18,6A6,6 0,0 1,12 12L-20,12A6,6 0,0 1,-26 6L-26,-6A6,6 0,0 1,-20 -12z"/>
+            android:pathData="M-16,-8L8,-8A4,4 0,0 1,12 -4L12,4A4,4 0,0 1,8 8L-16,8A4,4 0,0 1,-20 4L-20,-4A4,4 0,0 1,-16 -8z"/>
         
-        <!-- Camera lens outer ring -->
-        <path
-            android:fillColor="#E0E0E0"
-            android:pathData="M-4,0 m-10,0 a10,10 0,1 1,20 0 a10,10 0,1 1,-20 0"/>
-            
         <!-- Camera lens -->
         <path
             android:fillColor="#5A7A9A"
-            android:pathData="M-4,0 m-8,0 a8,8 0,1 1,16 0 a8,8 0,1 1,-16 0"/>
+            android:pathData="M-4,0 m-6,0 a6,6 0,1 1,12 0 a6,6 0,1 1,-12 0"/>
         
         <!-- Lens inner circle -->
         <path
             android:fillColor="#FFFFFF"
-            android:pathData="M-4,0 m-4,0 a4,4 0,1 1,8 0 a4,4 0,1 1,-8 0"/>
+            android:pathData="M-4,0 m-3,0 a3,3 0,1 1,6 0 a3,3 0,1 1,-6 0"/>
     </group>
 </vector>
